Fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -343,7 +343,7 @@ Work
 }
 
 .project img {
-	margin-top: 4.25rem;;
+	margin-top: 3.25rem;;
 	border: 1px solid #292230;
 	box-shadow: 10px 5px 5px #292230;
 	margin-left: 0;
